Adjusted db values
Added beacon_id, changed typeid to type_id, and switched the license to
a string.

--- a/test/fixtures/drivers.yml
+++ b/test/fixtures/drivers.yml
@@ -5,7 +5,7 @@ one:
   middle_name: MyString
   last_name: MyString
   dob: 2014-02-05
-  typeid: MyString
+  type_id: MyString
   address: MyString
   city: MyString
   state: MyString
@@ -32,7 +32,7 @@ two:
   middle_name: MyString
   last_name: MyString
   dob: 2014-02-05
-  typeid: MyString
+  type_id: MyString
   address: MyString
   city: MyString
   state: MyString
