Adjusted files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+test/
+public/
+doc/
+*.swp
+
+#Decided to add vendor files: http://stackoverflow.com/questions/14607636/is-it-advisable-to-include-the-contents-of-vendor-cache-in-git-in-a-rails-3-2-ap
+#vendor/
